个人设置页面

--- a/static/tabler/form-elements.html
+++ b/static/tabler/form-elements.html
@@ -531,7 +531,9 @@
                             <input type="text" class="form-control form-control-flush" name="Form control flush" placeholder="Text..">
                           </div>
                           <div class="mb-3">
-                            <label class="form-label">Input group</label>
+                            <label class="form-label">
+
+                            </label>
                             <div class="input-group mb-2">
                               <span class="input-group-text">
                                 @
